[package]
name = "illuminadex"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui-file-dialog = "0.10.0"
egui-multiwin = "0.5.2"
egui-plotter = "0.4.0"
egui-selectable-table = "0.2.0"
egui_extras = { version = "0.31.1", features = ["all_loaders", "http"] }
egui_form = "0.5.0"
genpdf = { version = "0.2.0", features = ["image", "images"] }
postgres = "0.19.10"
serde_json = "1.0.140"
sqlite = "0.37.0"
